--- a/index.html
+++ b/index.html
@@ -5,40 +5,40 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhover matrix image">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg" alt="eisenhover matrix image" class="header__img">
+      <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-wrapper">
-      <div id="add-task">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+      <div id="add-task" class="add-task">
+        <label for="new-task" class="subtitle">Add Item</label>
+        <div class="task-row-wrapper add-task__wrapper">
           <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <button class="button">Add</button>
         </div>
       </div>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
+      <h3 class="subtitle">Todo</h3>
+      <ul id="incomplete-tasks" class="todo-list list">
+        <li class="list-elem">
+          <input type="checkbox" class="list-elem__check">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
+        <li class="list-elem list-elem_edit-mode">
+          <input type="checkbox" class="list-elem__check">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+      <h3 class="subtitle">Completed</h3>
+      <ul id="completed-tasks" class="complete-list list">
+        <li class="list-elem">
+          <input type="checkbox" checked class="list-elem__check"  >
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
