refactor: adjust selectors according to rule 3.4 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <img src="./eisenhower-matrix.jpg" alt="eisenhover matrix image" class="header__img">
       <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="main-wrapper">
+    <main class="main">
       <div id="add-task" class="add-task">
         <label for="new-task" class="subtitle">Add Item</label>
-        <div class="task-row-wrapper add-task__wrapper">
+        <div class="add-task__wrapper">
           <input id="new-task" class="task" type="text">
           <button class="button">Add</button>
         </div>
