--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </li>
       </ul>
       <h3 class="subtitle">Completed</h3>
-      <ul id="completed-tasks" class="complete-list list">
+      <ul id="completed-tasks" class="list complete-list">
         <li class="list-elem">
-          <input type="checkbox" checked class="list-elem__check input list-elem__input">
+          <input type="checkbox" checked class="list-elem__check input ">
           <label class="list-elem__label list-elem__label_complete">See the Doctor</label>
-          <input type="text" class="input input-text">
+          <input type="text" class="input input-text list-elem__input">
           <button class="edit button">Edit</button>
           <button class="delete button"><img src="./remove.svg" alt="remove icon" class="delete-icon"></button>
         </li>
